--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: adr
-description: Utility for maintaining consistent Architectural Design Records (ADRs) for Dart/Flutter projects.
+description: Utility for maintaining consistent Architectural Design Records
+  (ADRs) for Dart/Flutter projects.
 version: 1.0.0
 homepage: https://github.com/stelynx/dart-adr
 repository: https://github.com/stelynx/dart-adr
@@ -8,8 +9,10 @@ environment:
   sdk: ">=2.8.1 <3.0.0"
 
 dependencies:
-  args: 1.6.0
+  args: ^1.6.0
+  meta: ^1.2.3
   path: ^1.7.0
+  yaml: ^2.2.1
 
 dev_dependencies:
   pedantic: ^1.9.0
